--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bunyan": "^1.8.12",
     "cheerio": "^1.0.0-rc.3",
     "cron": "^1.3.0",
+    "dirty-json": "^0.8.0",
     "monk": "^6.0.5",
     "nodemailer": "^4.4.0"
   }
