--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cron": "^1.3.0",
     "dirty-json": "^0.8.0",
     "monk": "^6.0.5",
+    "nightmare": "^3.0.2",
     "nodemailer": "^4.4.0"
   }
 }
