--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cheerio": "^1.0.0-rc.3",
     "cron": "^1.3.0",
     "dirty-json": "^0.8.0",
+    "eval": "^0.1.4",
     "monk": "^6.0.5",
     "nightmare": "^3.0.2",
     "nodemailer": "^4.4.0",
