Updated db folder

--- a/db/configuration.json
+++ b/db/configuration.json
@@ -1,7 +1,10 @@
 [{
-    "email_address": "",
-    "email_password": "",
-    "fb_login": "",
-    "fb_pass": "",
-    "time_between": 30000
+  "_id": {
+    "$oid": "5fc00b300cfb254f94d1d491"
+  },
+  "email_address": "falco1bot@gmail.com",
+  "email_password": "",
+  "fb_login": "zealotness@gmail.com",
+  "fb_pass": "",
+  "time_between": 30000
 }]
